# agentic-engineering-training-python

./: .env  .gitignore  .gitlab-ci.yml  .mcp.json  README.md  docker-compose.yml  next.config.ts  package-lock.json  package.json
.claude/output-styles/: truth-challenger.md
.claude/rules/: architecture-principles.md  automation.md  collaboration.md  engineering.md  model-selection.md  skill-feedback.md  tools.md  workflow.md
.claude/skills/: voice
.claude/skills/improve-skills/: SKILL.md
.claude/skills/improve-skills/agents/: openai.yaml
.claude/skills/polish/: SKILL.md
.claude/skills/polish/agents/: openai.yaml
.claude/skills/voice/: SKILL.md  ai-tells.md  brand-vocabulary.md  brand-voice.md  content-formula.md  intro-framework.md  negotiation.md  personal-voice.md  pitch-framework.md  prose-style.md  signature-phrases.md  slack-channel.md  voice-situations.md
.claude/skills/voice/agents/: openai.yaml
.gitlab-ci-material/: labmachine.yaml
.labmachine/: .bashrc  custom-init.sh
.next/types/: validator.ts
app/: layout.tsx  page.tsx
backend/: .gitignore  pyproject.toml
backend/app/: main.py  models.py
backend/app/api/: main.py
backend/app/api/routes/: contacts.py  users.py
backend/app/core/: config.py  db.py
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/ui/: provider.tsx
frontend/src/hooks/: api.ts  useAuth.tsx
frontend/src/routes/: Contacts.tsx  Login.tsx  Settings.tsx  Signup.tsx
scripts/: setup-local.sh
